Changing 'roles' to 'role' and use it as a string
